--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,6 +7,6 @@
   "jsxSingleQuote": true,
   "bracketSpacing": true,
   "bracketSameLine": false,
-  "arrowParens": "avoid",
+  "arrowParens": "always",
   "endOfLine": "lf"
 }
