--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.3",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "standard": "^17.0.0",
+    "tailwindcss": "^3.2.7",
     "vite": "^4.1.0"
   }
 }
